--- a/my_app/src/Pages/Home/Home.module.css
+++ b/my_app/src/Pages/Home/Home.module.css
@@ -19,7 +19,7 @@
 }
 .mainContent{
     width: 60%;
-    padding: 100px 10% 0 10%;
+    padding: 100px 10% 20px 10%;
     display: flex;
     flex-direction: column;
     justify-content: start;
